00_istio-gateway/qpweb-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: qpweb
  namespace: csr
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: "/QPWeb/"
    rewrite:
      uri: "/QPWeb/"
    route:
    - destination:
        host: qpweb.csr.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "qpweb"
 namespace: "csr"
spec:
 host: "qpweb.csr.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
